Fix: Remove inline styles and improve section spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,6 +33,12 @@ h3 {
   margin-bottom: 15px;
 }
 
+hr {
+  border: none;
+  border-top: 1px solid #eee;
+  margin: 60px 0;
+}
+
 // Enhanced Links
 a {
   color: $royal-blue;
